<resources>
    <string name="app_name">Rio</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="search_title">Search</string>
    <string name="search_character_name_hint">Character name</string>
    <string name="search_guild_name_hint">Guild name</string>
    <string name="search_profile_type_not_found_format">%s not found</string>
    <string name="search_history_empty">Search history is empty</string>
    <string name="profile_overall_last_update_datetime_format">Last update: %s</string>
    <string name="profile_overall">Overall</string>
    <string name="character_overall_item_level_format">%d ilvl</string>
    <string name="character_overall_best_mplus_score">Best Mythic+ score</string>
    <string name="character_mplus_scores_header">Scores</string>
    <string name="character_mplus_scores_type">Scores type</string>
    <string name="character_mplus_scores_role">Role scores</string>
    <string name="character_mpls_scores_spec">Spec scores</string>
    <string name="character_mplus_season_select_title">Season</string>
    <string name="character_mplus_score_overall">Overall</string>
    <string name="character_mplus_ranks_header">Ranks</string>
    <string name="character_mplus_ranks_type_select_title">Ranks type</string>
    <string name="character_mplus_ranks_scope_select_title">Ranks scope</string>
    <string name="character_mplus_ranks_class">Class ranks</string>
    <string name="character_mplus_ranks_spec">Spec ranks</string>
    <string name="character_mplus_ranks_overall">Overall ranks</string>
    <string name="character_mplus_ranks_all_classes_and_roles">All classes &amp; roles</string>
    <string name="character_mplus_runs_header">Runs</string>
    <string name="character_mplus_data_not_found">Mythic+ data not found</string>
    <string name="character_mplus_no_runs_for_current_season">No runs for current season</string>
    <string name="character_mplus_no_ranks_for_current_season">No ranks for current season</string>
    <string name="guild_overall_raid_ranks">Raid ranks</string>
    <string name="guild_overall_rank">Rank</string>
    <string name="guild_overall_raid_progress">Progress</string>
    <string name="guild_raid_ranks_not_found">Guild raid ranks not found</string>
    <string name="mplus_title">Mythic+</string>
    <string name="mplus_seasons">Seasons</string>
    <string name="mplus_run_keystone_level_dungeon_name_format">+%1$d %2$s</string>
    <string name="mplus_run_duration_dungeon_duration_format">%1$s / %2$s</string>
    <string name="mplus_run_keystone_upgrades">Keystone upgrades:</string>
    <string name="mplus_run_score_format">Score: %s</string>
    <string name="mplus_runs_sort_by_dungeon_name">Dungeon name</string>
    <string name="mplus_runs_sort_by_keystone_level">Keystone level</string>
    <string name="mplus_runs_sort_by_complete_date">Date</string>
    <string name="mplus_runs_sort_by_keystone_upgrades">Keystone upgrades</string>
    <string name="mplus_runs_sort_by_score">Score</string>
    <string name="dungeon_de_other_side">De Other Side</string>
    <string name="dungeon_mists_of_tirna_scithe">Mists of Tirna Scithe</string>
    <string name="dungeon_sanguine_depths">Sanguine Depths</string>
    <string name="dungeon_halls_of_atonement">Halls Of Atonement</string>
    <string name="dungeon_necrotic_wake">Necrotic Wake</string>
    <string name="dungeon_spires_of_ascension">Spires Of Ascension</string>
    <string name="dungeon_theater_of_pain">Theater Of Pain</string>
    <string name="dungeon_plaguefall">Plaguefall</string>
    <string name="dungeon_tazavesh_strt">Tazavesh: Streets of Wonder</string>
    <string name="dungeon_tazavesh_gmbt">Tazavesh: So\'leah\'s Gambit</string>
    <string name="raid_progress">Raid progress</string>
    <string name="raid_progress_difficulty_title_format">%s:</string>
    <string name="raid_progress_kills_total_format">%1$d/%2$d</string>
    <string name="raid_progress_not_found">Raid progress not found</string>
    <string name="raid_achievement_aotc_short">[AOTC]</string>
    <string name="raid_achievement_ce_short">[CE]</string>
    <string name="raid_emerald_nightmare">The Emerald nightmare</string>
    <string name="raid_trial_of_valor">Trial of valor</string>
    <string name="raid_nighthold">The Nighthold</string>
    <string name="raid_antorus">Antorus, the Burning Throne</string>
    <string name="raid_tomb_of_sargeras">Tomb of Sargeras</string>
    <string name="raid_uldir">Uldir</string>
    <string name="raid_dazar_alor">Battle of Dazar\'alor</string>
    <string name="raid_crucible_of_storms">Crucible of Storms</string>
    <string name="raid_eternal_palace">The Eternal Palace</string>
    <string name="raid_nyalotha">Ny\'alotha, the Waking City</string>
    <string name="raid_castle_nathria">Castle Nathria</string>
    <string name="raid_sanctum_of_domination">Sanctum of Domination</string>
    <string name="raid_sepulcher_of_the_first_ones">Sepulcher of the First Ones</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_heroic">Heroic</string>
    <string name="difficulty_mythic">Mythic</string>
    <string name="ranks_scope_world">World</string>
    <string name="ranks_scope_all">All</string>
    <string name="ranks_span_global">Global</string>
    <string name="expansion_title">Expansion</string>
    <string name="expansion_bfa">Battle for Azeroth</string>
    <string name="expansion_legion">Legion</string>
    <string name="expansion_shadowlands">Shadowlands</string>
    <string name="region_title">Region</string>
    <string name="region_eu">EU</string>
    <string name="region_us">US</string>
    <string name="region_kr">KR</string>
    <string name="region_tw">TW</string>
    <string name="realm_title">Realm</string>
    <string name="realm_search">Search realm</string>
    <string name="realm_list_title">Realm list</string>
    <string name="sort_order_title">Sort order</string>
    <string name="sort_order_asc">Ascending</string>
    <string name="sort_order_desc">Descending</string>
    <string name="sort_by_title">Sort by</string>
    <string name="profile_character">Character</string>
    <string name="profile_guild">Guild</string>
    <string name="profile_guild_name_format">&lt;%s></string>
    <string name="role_tank">Tank</string>
    <string name="role_healer">Healer</string>
    <string name="role_damage_dealer">DPS</string>
    <string name="faction_alliance">Alliance</string>
    <string name="faction_horde">Horde</string>
    <string name="race_human">Human</string>
    <string name="race_dwarf">Dwarf</string>
    <string name="race_dark_iron_dwarf">Dark Iron Dwarf</string>
    <string name="race_night_elf">Night Elf</string>
    <string name="race_gnome">Gnome</string>
    <string name="race_draenei">Draenei</string>
    <string name="race_worgen">Worgen</string>
    <string name="race_void_elf">Void Elf</string>
    <string name="race_lightforged_draenei">Lightforged Draenei</string>
    <string name="race_kul_tiran">Kul Tiran</string>
    <string name="race_mechanognome">Mechanognome</string>
    <string name="race_orc">Orc</string>
    <string name="race_undead">Undead</string>
    <string name="race_tauren">Tauren</string>
    <string name="race_troll">Troll</string>
    <string name="race_blood_elf">Blood Elf</string>
    <string name="race_goblin">Goblin</string>
    <string name="race_nightborne">Nightborne</string>
    <string name="race_highmountain_tauren">Highmountain Tauren</string>
    <string name="race_maghar_orc">Maghar Orc</string>
    <string name="race_zandalari_troll">Zandalari Troll</string>
    <string name="race_vulpera">Vulpera</string>
    <string name="race_pandaren">Pandaren</string>
    <string name="class_death_knight">Death Knight</string>
    <string name="class_demon_hunter">Demon Hunter</string>
    <string name="class_druid">Druid</string>
    <string name="class_hunter">Hunter</string>
    <string name="class_mage">Mage</string>
    <string name="class_monk">Monk</string>
    <string name="class_paladin">Paladin</string>
    <string name="class_priest">Priest</string>
    <string name="class_rogue">Rogue</string>
    <string name="class_shaman">Shaman</string>
    <string name="class_warlock">Warlock</string>
    <string name="class_warrior">Warrior</string>
    <string name="spec_blood">Blood</string>
    <string name="spec_frost">Frost</string>
    <string name="spec_unholy">Unholy</string>
    <string name="spec_havoc">Havoc</string>
    <string name="spec_vengeance">Vengeance</string>
    <string name="spec_balance">Balance</string>
    <string name="spec_feral">Feral</string>
    <string name="spec_guardian">Guardian</string>
    <string name="spec_restoration">Restoration</string>
    <string name="spec_beast_mastery">Beast mastery</string>
    <string name="spec_marksmanship">Marksmanship</string>
    <string name="spec_survival">Survival</string>
    <string name="spec_arcane">Arcane</string>
    <string name="spec_fire">Fire</string>
    <string name="spec_brewmaster">Brewmaster</string>
    <string name="spec_mistweaver">Mistweaver</string>
    <string name="spec_windwalker">Windwalker</string>
    <string name="spec_holy">Holy</string>
    <string name="spec_protection">Protection</string>
    <string name="spec_retribution">Retribution</string>
    <string name="spec_discipline">Discipline</string>
    <string name="spec_shadow">Shadow</string>
    <string name="spec_assassination">Assassination</string>
    <string name="spec_outlaw">Outlaw</string>
    <string name="spec_subtlety">Subtlety</string>
    <string name="spec_enhancement">Enhancement</string>
    <string name="spec_elemental">Elemental</string>
    <string name="spec_affliction">Affliction</string>
    <string name="spec_demonology">Demonology</string>
    <string name="spec_destruction">Destruction</string>
    <string name="spec_arms">Arms</string>
    <string name="spec_fury">Fury</string>
    <string name="message_profile_already_updated">Profile is already up to date</string>
    <string name="message_copy">Copy message</string>
    <string name="message_copied">Copied to clipboard</string>
    <string name="message_no_internet_connection">Cannot connect to server. Check your internet connection.</string>
    <string name="message_unexpected_exception_title">Unexpected error occurred</string>
    <string name="message_unexpected_cause_error_format">Cause: %1$s\n\nError message: %2$s</string>
    <string name="message_long_more">More</string>
    <string name="test_text">Test text</string>
    <string name="test_date">12.12.2020 20:20:20</string>
    <string name="test_server_data">EU-Howling fjord Horde</string>
    <string name="test_raid_progress_best">10/10 M</string>
    <string name="test_raid_progress">10/10</string>
    <string name="test_character_rank_title">Demon hunter Tank</string>
    <string name="test_search_item_profile_description">Rogue</string>
    <string name="test_character_overall_guild_name">&lt;Guild&gt;</string>
    <string name="test_character_overall_attributes_ilvl">Vulpera Vengeance Demon Hunter (999 ilvl)</string>
    <string name="test_season">SL Season 1</string>
    <string name="test_mythic_plus_score">99999.9</string>
    <string name="test_rank">9999999</string>
    <string name="test_guild_overall_raid_with_difficulty">Castle Nathria Mythic</string>
    <string name="test_run_keystone_level_and_dungeon_name">+10 De other side</string>
    <string name="test_run_duration">00:00:00 / 00:00:00</string>
</resources>