<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="run"
            type="com.nemesis.rio.domain.mplus.runs.MythicPlusRun" />

        <variable
            name="onOpenRunInBrowserClicked"
            type="kotlin.jvm.functions.Function1&lt;com.nemesis.rio.domain.mplus.runs.MythicPlusRun, kotlin.Unit>" />

        <import type="com.nemesis.rio.domain.mplus.runs.MythicPlusRun" />
        <import type="kotlin.Unit" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/run_root"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_mplus_run_view_height"
        android:backgroundTint="@color/item_mplus_run_dungeon_image_tint"
        android:backgroundTintMode="src_atop"
        app:run_dungeonImageBackground="@{run.dungeon}"
        tools:background="@drawable/dungeon_de_other_side"
       >

        <TextView
            android:id="@+id/run_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_large"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="?android:textColorPrimary"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/run_open_in_browser"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:localDateTime="@{run.date}"
            tools:text="@string/test_date" />

        <ImageButton
            android:id="@+id/run_open_in_browser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_large"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> onOpenRunInBrowserClicked.invoke(run)}"
            android:src="@drawable/ic_open_in_browser"
            app:layout_constraintBottom_toBottomOf="@+id/run_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/run_date"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/run_keystone_level_and_dungeon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_large"
            android:ellipsize="end"
            android:singleLine="true"
            app:run_titleKeystoneLevel="@{run.keystoneLevel}"
            app:run_titleDungeon="@{run.dungeon}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/run_duration"
            app:layout_constraintEnd_toStartOf="@+id/run_open_in_browser"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/run_open_in_browser"
            tools:text="@string/test_run_keystone_level_and_dungeon_name" />

        <TextView
            android:id="@+id/run_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_large"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/run_keystone_upgrades"
            app:layout_constraintEnd_toStartOf="@+id/run_open_in_browser"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/run_keystone_level_and_dungeon_name"
            app:run_dungeonDuration="@{run.dungeon.completionTimer}"
            app:run_duration="@{run.duration}"
            tools:text="@string/test_run_duration" />

        <TextView
            android:id="@+id/run_keystone_upgrades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            android:drawablePadding="@dimen/space_small"
            android:text="@string/mplus_run_keystone_upgrades"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/run_score"
            app:layout_constraintEnd_toStartOf="@+id/run_open_in_browser"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/run_duration"
            app:run_keystoneUpgradesIcon="@{run.keystoneUpgrades}" />

        <TextView
            android:id="@+id/run_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            app:run_score="@{run.score}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/run_open_in_browser"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/run_keystone_upgrades"
            tools:text="@string/mplus_run_score_format" />

        <com.nemesis.rio.presentation.mplus.runs.MythicPlusRunAffixesView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_normal"
            app:run_affixes="@{run.affixes}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/run_score" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

